--- a/newsapi/src/templates/template.hbs
+++ b/newsapi/src/templates/template.hbs
@@ -1,6 +1,6 @@
 {{#each this}}
 <a href="{{url}}" target="_blank">
-<li class="col-md-4 article">
+<li class="col-md-3 article">
     <div class="article-box">
         <div class="image">
             <img src="{{urlToImage}}" alt="{{title}}">
@@ -8,7 +8,7 @@
         <div class="content">
             <div class="title">{{title}}</div>
             <div class="description">
-                {{description}}
+                {{!-- {{description}} --}}
             </div>
         </div>
     </div>
